Nuevo index. No tomaba el formulario

--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     </head>
 
     <body>
-        
+        <form id="datos" method="POST" action="guardar.php">
+            Nombre: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="nombre">     
+            <br><br>
+            Apellido: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="apellido">     
+            <br><br>
+            Telefono: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="telefono">     
+            <br><br>
+            Edad: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="edad">     
+            <br><br>
+            Fecha de Nacimiento: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="fechaNacimiento">     
+            <br><br>
+            Email: &nbsp; &nbsp; &nbsp;
+            <input type="text" id="campoTexto" name="email">     
+            <br><br>
+            <input type="submit" value="Enviar datos">
+        </form>
     </body>
 </html>
